Upgraded code to Java 17 as well